Added the new class StoneDetailsPage

--- a/UniDiamond/src/main/java/config/Config.properties
+++ b/UniDiamond/src/main/java/config/Config.properties
@@ -1,6 +1,6 @@
 browser=chrome
 headless=false
-url=https://unitestnew1.uni.diamonds/
+url=https://test6.uni.diamonds/
 frontendUsername=lio@test.com
 frontendpassword=user@123
 
