Added new test case for subscription price

--- a/UniDiamond/src/main/java/config/Config.properties
+++ b/UniDiamond/src/main/java/config/Config.properties
@@ -1,6 +1,7 @@
 browser=chrome
 headless=false
-url=https://test6.uni.diamonds/
+url=https://unitestnew1.uni.diamonds/
+
 frontendUsername=lio@test.com
 frontendpassword=user@123
 
@@ -18,3 +19,7 @@ withoutSubspassword=user@123
 
 retailerWithSubsUsername=retailerWithSubs@test.com
 retailerWithSubspassword=user@123
+
+" uniMarkup no, Credit cost yes, D mergin yes, Regular Stone Invoice Only On Checkout "
+frontendUsername1=Automation1@test.com
+frontendpassword1=Covid19@2021
