--- a/UniDiamond/pom.xml
+++ b/UniDiamond/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>2.0.9</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20230227</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
