Added new test case regarding subscription price

--- a/UniDiamond/src/main/java/config/Config.properties
+++ b/UniDiamond/src/main/java/config/Config.properties
@@ -23,3 +23,7 @@ retailerWithSubspassword=user@123
 " uniMarkup no, Credit cost yes, D mergin yes, Regular Stone Invoice Only On Checkout "
 frontendUsername1=Automation1@test.com
 frontendpassword1=Covid19@2021
+
+" uniMarkup yes, Credit cost yes, D mergin yes, Regular Stone Invoice Only On Checkout "
+frontendUsername2=Automation2@test.com
+frontendpassword2=Covid19@2021
