Update the My Order page selector

--- a/UniDiamond/src/main/java/config/Config.properties
+++ b/UniDiamond/src/main/java/config/Config.properties
@@ -2,7 +2,7 @@ browser=chrome
 headless=false
 url=https://unitestnew1.uni.diamonds/
 
-frontendUsername=lio@test.com
+frontendUsername=denver@test.com
 frontendpassword=user@123
 
 retailerUsername=retailer@test.com
